--- a/templates/recipe/manage.html.twig
+++ b/templates/recipe/manage.html.twig
@@ -41,4 +41,16 @@
             </div>
         </div>
     </div>
+    <!-- Modal for editing -->
+    <div class="modal fade" id="editRecipeModal" tabindex="-1" aria-labelledby="editRecipeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editRecipeModalLabel">Éditer Recette</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="recipe-edit-container"></div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
