--- a/templates/recipe/recipe_form.html.twig
+++ b/templates/recipe/recipe_form.html.twig
@@ -1,5 +1,5 @@
-{{ form_start(form, {'attr': {'id': 'recipe-form'}}) }}
 
+{{ form_start(form) }}
 <div class="mb-3">
     {{ form_label(form.title, 'Titre', {'label_attr': {'class': 'form-label'}}) }}
     {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
